--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "react": "^15.1.0",
     "react-native": "^0.27.2",
     "react-native-gifted-messenger": "^0.1.4",
-    "react-native-navbar": "^1.5.0"
+    "react-native-navbar": "^1.5.0",
+    "react-redux": "^4.4.5",
+    "redux-thunk": "^2.1.0"
   }
 }
