--- a/package.json
+++ b/package.json
@@ -6,11 +6,14 @@
     "start": "react-native start"
   },
   "dependencies": {
-    "react": "^15.1.0",
+    "react": "^15.2.1",
     "react-native": "^0.27.2",
     "react-native-gifted-messenger": "^0.1.4",
     "react-native-navbar": "^1.5.0",
+    "react-native-router-flux": "^3.32.0",
     "react-redux": "^4.4.5",
+    "redux": "^3.5.2",
+    "redux-logger": "^2.6.1",
     "redux-thunk": "^2.1.0"
   }
 }
